--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_sms: ^2.0.0+2
+  http: ^0.12.0+2
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +45,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - json/address.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
