--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_sms: ^2.0.0+2
   http: ^0.12.0+2
-
+  flutter_launcher_icons: ^0.7.5
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
